[CRIZ004][FEAT][MAIN]: Agregando la ventana emergente de partida ganada o perdida.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <button onclick="reanudarJuego()">▶️ Reanudar</button>
   <button onclick="reiniciarJuego()">🔄 Reiniciar</button>
 
+  
+  <div id="ventana" class="ventana oculto">
+    <div class="contenido-ventana">
+      <p id="mensaje-ventana"></p>
+      <button onclick="reiniciarJuego()">🔁 Volver a jugar</button>
+    </div>
+  </div>
   <script src="script.js"></script>
+
 </body>
 </html>
