[KARLAISELA][FEAT][MAIN]: Agregando clases a los botones individuales para darles estilo.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   <h1>Katty-Pong</h1>
   <canvas id="juego" width="700" height="500"></canvas>
 
-  <button onclick="pausarJuego()">⏸️ Pausar</button>
-  <button onclick="reanudarJuego()">▶️ Reanudar</button>
-  <button onclick="reiniciarJuego()">🔄 Reiniciar</button>
+  <button class="btn-pausa" onclick="pausarJuego()">Pausar</button>
+  <button class="btn-reanudar" onclick="reanudarJuego()">Reanudar</button>
+  <button class="btn-reiniciar" onclick="reiniciarJuego()">Reiniciar</button>
 
   
   <div id="ventana" class="ventana oculto">
