[CRIZ004][FEAT][MAIN]: Agregando nombre de la clase al botón volver a jugar.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -13,12 +12,11 @@
   <button class="btn-pausa" onclick="pausarJuego()">Pausar</button>
   <button class="btn-reanudar" onclick="reanudarJuego()">Reanudar</button>
   <button class="btn-reiniciar" onclick="reiniciarJuego()">Reiniciar</button>
-
   
   <div id="ventana" class="ventana oculto">
     <div class="contenido-ventana">
       <p id="mensaje-ventana"></p>
-      <button onclick="reiniciarJuego()">🔁 Volver a jugar</button>
+      <button class="btn-volver" onclick="reiniciarJuego()">Volver a jugar</button>
     </div>
   </div>
   <script src="script.js"></script>
